--- a/index.html
+++ b/index.html
@@ -57,10 +57,18 @@
             background-color: #2196F3;
             color: white;
             transition: transform 0.2s, box-shadow 0.2s;
+            border: none;
         }
+        #Coleção .col-md-3 a {
+
+            color: white;
+            text-decoration: none;
+        }
+
+
         #Coleção .col-md-3:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 20px rgba(255, 255, 255, 0.2);
         }
         footer {
             background: linear-gradient(to right, #2980b9, #3498db);
@@ -72,11 +80,11 @@
             margin-bottom: 15px;
         }
         .btn-primary {
-            background-color: #e74c3c;
+            background-color: #2196F3;
             border: none;
         }
         .btn-primary:hover {
-            background-color: #c0392b;
+            background-color: #2195f393;
         }
     </style>
 </head>
@@ -99,16 +107,16 @@
     <div id="carouselExample" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/Banner 01.jpeg" class="d-block w-100" alt="Banner 1">
+                <img src="./Banner 01.jpeg" class="d-block w-100" alt="Banner 1">
             </div>
             <div class="carousel-item">
-                <img src="/Banner 02.jpeg" class="d-block w-100" alt="Banner 2">
+                <img src="./Banner 02.jpeg" class="d-block w-100" alt="Banner 2">
             </div>
             <div class="carousel-item">
-                <img src="/Banner 03.jpeg" class="d-block w-100" alt="Banner 3">
+                <img src="./Banner 03.jpeg" class="d-block w-100" alt="Banner 3">
             </div>
             <div class="carousel-item">
-                <img src="/Banner 04.jpeg" class="d-block w-100" alt="Banner 4">
+                <img src="./Banner 04.jpeg" class="d-block w-100" alt="Banner 4">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
@@ -131,48 +139,55 @@
     <h2>Coleções</h2>
     <div class="row">
         <div class="col-md-3">
-            <h3><a href="produtos.html" class="text-dark">Produtos</a></h3>
+            <h3><a href="produtos.html">Produtos</a></h3>
             <p>Conheça nossos produtos saudáveis.</p>
         </div>
         <div class="col-md-3">
-            <h3><a href="receitas.html" class="text-dark">Receitas</a></h3>
+            <h3><a href="receitas.html">Receitas</a></h3>
             <p>Receitas deliciosas e saudáveis.</p>
         </div>
         <div class="col-md-3">
-            <h3><a href="exames.html" class="text-dark">Exames</a></h3>
+            <h3><a href="exames.html">Exames</a></h3>
             <p>Exames para acompanhar sua saúde.</p>
         </div>
         <div class="col-md-3">
-            <h3><a href="imc.html" class="text-dark">IMC</a></h3>
+            <h3><a href="imc.html">IMC</a></h3>
             <p>Calcule seu IMC aqui.</p>
         </div>
     </div>
 </section>
 
+<!-- box de contato -->
 <section class="mb-4">
     <div class="row">
         <div class="col-md-6">
-            <section id="contato" class="text-center mb-4">
-                <h2>Contato</h2>
-                <form id="contato-form">
-                    <div class="form-group">
-                        <label for="nome">Nome:</label>
-                        <input type="text" class="form-control" id="nome" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">E-mail:</label>
-                        <input type="email" class="form-control" id="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="mensagem">Mensagem:</label>
-                        <textarea class="form-control" id="mensagem" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                </form>
-                <div id="resultado-mensagem" class="mt-3"></div>
-            </section>
+            <div class="card">
+                <div class="card-header text-center">
+                    <h2><b>Contato</b></h2>
+                </div>
+                <div class="card-body">
+                    <form id="contato-form">
+                        <div class="form-group">
+                            <label for="nome"><b>Nome:</b></label>
+                            <input type="text" class="form-control" id="nome" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email"><b>E-mail:</b></label>
+                            <input type="email" class="form-control" id="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="mensagem"><b>Mensagem:</b></label>
+                            <textarea class="form-control" id="mensagem" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </form>
+                    <div id="resultado-mensagem" class="mt-3"></div>
+                </div>
+            </div>
         </div>
-        
+    </div>
+</section>
+
 </section>
 
 <footer>
