--- a/imc.html
+++ b/imc.html
@@ -52,7 +52,7 @@
         }
 
         #calculo-imc button {
-            background-color: #28a745;
+            background-color: #2196F3;
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -64,7 +64,7 @@
         }
 
         #calculo-imc button:hover {
-            background-color: #218838;
+            background-color: #008cffa4;
         }
 
         #resultado-imc {
@@ -76,7 +76,7 @@
 
         #imcResult {
             font-weight: bold;
-            color: #e74c3c;
+            color: #2196F3;
         }
 
         /* Estilos responsivos */
