--- a/login.html
+++ b/login.html
@@ -304,7 +304,7 @@ body {
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>Digite seu e-mail e sua senha</span>
-                <input type="email" placeholder="-Email">
+                <input type="email" placeholder="E-mail">
                 <input type="password" placeholder="Senha">
                 <a href="#">Esqueceu sua senha?</a>
                 <button>Login</button>
