--- a/produtos.html
+++ b/produtos.html
@@ -7,18 +7,18 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom right, #e0f7ff, #b3daff); /* Efeito de fundo azulado */
+            background: linear-gradient(to bottom right, #e0f7ff, #b3daff);
             color: #333;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #003366; /* Azul escuro tipo SENAI */
+            background-color: #003366;
             color: white;
             padding: 40px 20px;
             text-align: center;
-            border-bottom: 5px solid #E32636; /* Linha vermelha tipo SENAI */
+            border-bottom: 5px solid #E32636;
         }
 
         h1 {
@@ -35,11 +35,12 @@
         }
 
         .container {
+            max-width: 1200px;
+            margin: 0 auto;
             padding: 20px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            
         }
 
         .product-card {
@@ -100,6 +101,43 @@
         .buy-button:hover {
             background-color: #006bb3;
         }
+
+        .cart {
+            margin-top: 20px;
+            background-color: white;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #checkout {
+            margin-top: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #checkout:hover {
+            background-color: #0056b3;
+        }
+
+        .remove-button {
+            background-color: #dc3545; /* Vermelho para remover */
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            margin-left: 10px; /* Espaço à esquerda */
+            transition: background-color 0.3s; /* Efeito de transição */
+        }
+
+        .remove-button:hover {
+            background-color: #c82333; /* Cor ao passar o mouse */
+        }
     </style>
 </head>
 <body>
@@ -110,105 +148,163 @@
 </header>
 
 <div class="container">
-    <div class="product-card">
+    <div class="product-card" data-name="Farinha de Amêndoas" data-price="25">
         <img src="./img/amendoas.webp" alt="Produto 1" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Farinha de Amêndoas</h2>
             <p class="product-description">Fonte rica de fibras e proteínas, ideal para receitas sem glúten e low-carb.</p>
             <p class="product-price">R$ 25,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Óleo de Coco Extra Virgem" data-price="30">
         <img src="./img/coco.webp" alt="Produto 2" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Óleo de Coco Extra Virgem</h2>
             <p class="product-description">Óleo natural, perfeito para cozinhar e para uso cosmético.</p>
             <p class="product-price">R$ 30,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Proteína Vegetal em Pó" data-price="45">
         <img src="./img/proteina.jpeg" alt="Produto 3" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Proteína Vegetal em Pó</h2>
             <p class="product-description">Suplemento ideal para dietas vegetarianas e veganas.</p>
             <p class="product-price">R$ 45,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Semente de Chia" data-price="20">
         <img src="./img/chia.webp" alt="Produto 4" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Semente de Chia</h2>
             <p class="product-description">Fonte de ômega-3, antioxidantes e fibras para uma vida saudável.</p>
             <p class="product-price">R$ 20,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Suco de Beterraba" data-price="15">
         <img src="./img/beteraba.webp" alt="Suco de Beterraba" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Suco de Beterraba</h2>
             <p class="product-description">Rico em antioxidantes e excelente para melhorar a circulação sanguínea.</p>
             <p class="product-price">R$ 15,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Pasta de Amendoim Integral" data-price="28">
         <img src="./img/amendoim.webp" alt="Produto 6" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Pasta de Amendoim Integral</h2>
             <p class="product-description">100% natural, sem açúcar ou conservantes, rica em proteínas.</p>
             <p class="product-price">R$ 28,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
-    <div class="product-card">
+
+    <div class="product-card" data-name="Creatina" data-price="90">
         <img src="./img/creatina.webp" alt="Creatina" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Creatina</h2>
             <p class="product-description">Suplemento para aumento de força e desempenho em atividades físicas.</p>
             <p class="product-price">R$ 90,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Whey Protein" data-price="120">
         <img src="./img/whey.webp" alt="Whey Protein" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Whey Protein</h2>
             <p class="product-description">Proteína de rápida absorção, ideal para ganho de massa muscular.</p>
             <p class="product-price">R$ 120,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Cacau em Pó Orgânico" data-price="15">
         <img src="./img/cacau.jpg" alt="Produto 7" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Cacau em Pó Orgânico</h2>
             <p class="product-description">Fonte de antioxidantes, ótimo para receitas doces e saudáveis.</p>
             <p class="product-price">R$ 15,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 
-    <div class="product-card">
+    <div class="product-card" data-name="Mix de Castanhas" data-price="35">
         <img src="./img/mix-de-castanha-tiny.jpg" alt="Produto 8" class="product-image">
         <div class="product-info">
             <h2 class="product-title">Mix de Castanhas</h2>
             <p class="product-description">Combinação de castanhas-do-pará, nozes, amêndoas e avelãs.</p>
             <p class="product-price">R$ 35,00</p>
-            <a href="#" class="buy-button">Comprar</a>
+            <a href="#" class="buy-button add-to-cart">Comprar</a>
         </div>
     </div>
 </div>
+
+<!-- Carrinho de compras -->
+<div class="cart">
+    <h2>Carrinho</h2>
+    <ul id="cart-items"></ul>
+    <p>Total: R$<span id="total">0</span></p>
+    <button id="checkout">Finalizar Compra</button>
+</div>
+
+<script>
+// Aguarda o carregamento completo do DOM
+document.addEventListener('DOMContentLoaded', () => {
+    const cartItems = document.getElementById('cart-items');
+    const totalElement = document.getElementById('total');
+    let total = 0;
+
+    // Seleciona todos os botões de adicionar ao carrinho
+    document.querySelectorAll('.add-to-cart').forEach(button => {
+        button.addEventListener('click', (e) => {
+            e.preventDefault(); // Previne o comportamento padrão do link
+            const productCard = e.target.closest('.product-card');
+            const productName = productCard.getAttribute('data-name');
+            const productPrice = parseFloat(productCard.getAttribute('data-price'));
+
+            // Cria um item de lista para o carrinho
+            const listItem = document.createElement('li');
+            listItem.textContent = `${productName} - R$${productPrice.toFixed(2)}`;
+
+            // Cria um botão para remover o item
+            const removeButton = document.createElement('button');
+            removeButton.textContent = 'Remover';
+            removeButton.className = 'remove-button';
+            removeButton.addEventListener('click', () => {
+                // Remove o item da lista e atualiza o total
+                cartItems.removeChild(listItem);
+                total -= productPrice; // Subtrai o preço do total
+                totalElement.textContent = total.toFixed(2); // Atualiza o total
+            });
+
+            listItem.appendChild(removeButton); // Adiciona o botão de remover ao item
+            cartItems.appendChild(listItem); // Adiciona o item à lista do carrinho
+
+            // Atualiza o total
+            total += productPrice;
+            totalElement.textContent = total.toFixed(2);
+
+            // Animação de scroll suave para o carrinho
+            document.querySelector('.cart').scrollIntoView({ behavior: 'smooth' });
+        });
+    });
+
+    // Adiciona um evento de clique para o botão de finalizar compra
+    document.getElementById('checkout').addEventListener('click', () => {
+        alert(`Total da compra: R$${total.toFixed(2)}`);
+    });
+});
+</script>
 
 </body>
 </html>
